--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 
 <body>
-
+    <!--
     <div class="navigation">
         <input type="checkbox" class="navigation-checkbox" id="navi-toggle">
         <label for="navi-toggle" class="navigation-button">
@@ -49,7 +49,7 @@
         </nav>
 
     </div>
-
+    -->
     <header class="header" id="header">
         <div class="header-logo-box">
             <a href="index.html"><img src="img/Mysuru_festival_pink.png" alt="Logo" class="header-logo"></a>
@@ -417,7 +417,7 @@
 
     <footer class="footer">
         <div class="footer-logo-box">
-            <img src="img/Mysuru_festival_pink.png" alt="Logo" class="footer-logo">
+            <img src="img/footer.png" alt="Logo" class="footer-logo">
             <hr class="footer-liine">
             <div class="footer-line">
                 Bulid and Copyright &copy; by Swapnil & Jatin 2020.
@@ -430,7 +430,7 @@
         <div class="popup-content">
             <div class="popup-left">
                 <img src="img/Brindavan Garden.jpg" alt="tour photo" class="popup-img">
-                <img src="/Places to visit/img/zoo.jpg" alt="tour photo" class="popup-img">
+                <img src="Places to visit/img/zoo.jpg" alt="tour photo" class="popup-img">
             </div>
             <div class="popup-right">
                 <a href="#section-tour" class="popup-close">&times;</a>
@@ -446,8 +446,8 @@
     <div class="popup2" id="popup2">
         <div class="popup2-content">
             <div class="popup2-left">
-                <img src="/Places to visit/img/lake.jpg" alt="tour photo" class="popup2-img">
-                <img src="/Places to visit/img/zoo.jpg" alt="tour photo" class="popup2-img">
+                <img src="Places to visit/img/lake.jpg" alt="tour photo" class="popup2-img">
+                <img src="Places to visit/img/zoo.jpg" alt="tour photo" class="popup2-img">
             </div>
             <div class="popup2-right">
                 <a href="#section-tour" class="popup2-close">&times;</a>
@@ -463,8 +463,8 @@
     <div class="popup3" id="popup3">
         <div class="popup3-content">
             <div class="popup3-left">
-                <img src="/Places to visit/img/hills.jpg" alt="tour photo" class="popup3-img">
-                <img src="/Places to visit/img/Nanjundeshwara_Temple.jpg" alt="tour photo" class="popup3-img">
+                <img src="Places to visit/img/hills.jpg" alt="tour photo" class="popup3-img">
+                <img src="Places to visit/img/Nanjundeshwara_Temple.jpg" alt="tour photo" class="popup3-img">
             </div>
             <div class="popup3-right">
                 <a href="#section-tour" class="popup3-close">&times;</a>
