--- a/index2.html
+++ b/index2.html
@@ -8,6 +8,17 @@
     <link rel="stylesheet" href="main.scss">
     <link rel="shortcut icon" type="image/png" href="img/Mysuru_festival_pink.png">
     <title>Mysuru</title>
+    <script>
+        (function(w, d) {
+            w.CollectId = "5fd3cae6278c444f79e696e6";
+            var h = d.head || d.getElementsByTagName("head")[0];
+            var s = d.createElement("script");
+            s.setAttribute("type", "text/javascript");
+            s.async = true;
+            s.setAttribute("src", "https://collectcdn.com/launcher.js");
+            h.appendChild(s);
+        })(window, document);
+    </script>
 </head>
 
 <body>
@@ -201,7 +212,8 @@
                         <div class="card1">
                             <img class="photos" src=" Places to visit/img/hills.jpg" alt="">
                             <h3>Chamundi Hill</h3>
-                            <p>The Chamundi Hills are located 13 km east of Mysore, the Palace City, in Karnataka, India. The average elevation is 1,000 metres (3,300 ft). <br><br>The Chamundeshwari Temple is located atop the Chamundi Hills.The Chamundeshwari Temple is located atop the Chamundi Hills.
+                            <p>The Chamundi Hills are located 13 km east of Mysore, the Palace City, in Karnataka, India. The average elevation is 1,000 metres (3,300 ft). <br><br>The Chamundeshwari Temple is located atop the Chamundi Hills.The Chamundeshwari
+                                Temple is located atop the Chamundi Hills.
                             </p>
                         </div>
                     </div>
@@ -209,7 +221,7 @@
                         <div class="column">
                             <div class="card1">
                                 <div class="sarak">
-                                    <img class="photos" src=" Places to visit/img/RailMuseum.jpg" alt="">
+                                    <img class="photos" src="Places to visit/img/Railmuseum.jpg" alt="">
                                     <h3>Railway Museum</h3>
                                     <p>The museum is opposite the Central Food Technology and Research Institute on Krishnaraja Sagar Road. <br><br> It has locomotives and a gallery of photographs and paintings depicting the growth of railways in India.
                                     </p>
@@ -251,7 +263,7 @@
 
         <footer class="footer">
             <div class="footer-logo-box">
-                <img src="img/Mysuru_festival_pink.png" alt="Logo" class="footer-logo">
+                <img src="img/footer.png" alt="Logo" class="footer-logo">
                 <hr class="footer-liine">
                 <div class="footer-line">
                     Bulid and Copyright &copy; by Swapnil & Jatin 2020.
